--- a/package.json
+++ b/package.json
@@ -6,31 +6,48 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook"
   },
   "dependencies": {
     "@types/spotify-web-playback-sdk": "^0.1.7",
-    "next": "^10.0.2",
+    "next": "^10.0.6",
     "next-i18next": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "sass": "^1.32.5"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@types/node": "^14.14.7",
-    "@types/react": "^16.9.56",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "autoprefixer": "^10.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "postcss": "^8.2.1",
+    "@storybook/addon-actions": "^6.1.15",
+    "@storybook/addon-essentials": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.1.15",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "autoprefixer": "^10.2.4",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "postcss": "^8.2.4",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^4.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.9.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "tailwindcss": "^2.0.2",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.3"
   }
 }
